<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/_24sdp">

    <Button
        android:id="@+id/speedTrim"
        android:layout_width="0dp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_rectangle_multi_colors"
        android:fontFamily="@font/cairo_semi_bold"
        android:stateListAnimator="@null"
        android:text="@string/speed_trim"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speedTrim_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/cairo_semi_bold"
        android:text="@string/speed_trim_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/speedTrim"
        app:layout_constraintTop_toBottomOf="@+id/speedTrim" />

    <Button
        android:id="@+id/trim"
        android:layout_width="0dp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_rectangle_multi_colors"
        android:fontFamily="@font/cairo_semi_bold"
        android:stateListAnimator="@null"
        android:text="@string/trim"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedTrim_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/cairo_semi_bold"
        android:text="@string/trim_hint"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/trim"
        app:layout_constraintTop_toBottomOf="@+id/trim" />

</androidx.constraintlayout.widget.ConstraintLayout>